Agrego navbar y footer

--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Poppins', 'Arial';
+}
 body{
-    background: var(--colorPrimarioAzul);
+    background: var(--colorSecundarioGris);
 }
