--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,5 @@
 @import "/css/general.css";
 @import "/css/header.css";
 @import "/css/main.css";
-@import "/css/variables.css"
+@import "/css/variables.css";
+@import "/css/navbar.css"
