Termine el scroll de peliculas seguridas p/ pagina hero

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,8 +1,8 @@
 /*mediante root puedo pegar algo a todo el documento
 defino las variables que voy a utilizar
 */
-:root{
-    --tipografiaGenereal: 'Poppins';
+:root {
+    --tipografiaGeneral: 'Poppins', 'Arial';
     --colorPrimarioAzul: #004475;
     --colorSecundarioGris: rgb(53, 52, 52);
     --colorSecundarioCeleste: #347cbc;
