--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,14 @@
-body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scrollbar-color: var(--colorPrimarioAzul) var(--colorSecundarioCeleste);
+    scrollbar-width: 10px;
+    scroll-behavior: smooth;
+    overscroll-behavior: contain;
+    font-family: var(--tipografiaGeneral);
+}
+
+body {
     background: var(--colorSecundarioGris);
 }
