--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,40 @@
 /* degrade del carousel*/
 
 
+/* LAS MAS ACLAMADAS */
+
+
+.container_flex {
+    display: flex;
+    justify-content: flex-start;
+    overflow-x: auto;
+    padding: 3em 3em 3em;
+    gap: 2em;
+    align-items: center;
+    width: 100vw;
+}
+
+.container_flex>div {
+    flex: 0 0 auto;
+    width: 450px;
+
+}
+
+.img-box {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 2px;
+    transition: transform 0.5s;
+
+    &:hover {
+        transform: scale(1.06);
+    }
+}
+
+.container_flex:has(.img-box:hover).img-box:not(:hover) {
+    filter: grayscale(100%) brightness(50%);
+}
 
 /* MEDIAQUERIES*/
 @media screen and (max-width: 900px) {}
