--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,15 @@
     transition: transform 0.5s;
 
     &:hover {
-        transform: scale(1.06);
+        transform: scale(1.1);
+        border: 5px solid white;
     }
+}
+
+.div_animations img{
+    border-radius: 20px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.7);
+    /* Desplazamiento horizontal, desplazamiento vertical, desenfoque, color */
 }
 
 .container_flex:has(.img-box:hover).img-box:not(:hover) {
