--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,60 @@
     filter: grayscale(100%) brightness(50%);
 }
 
-/* MEDIAQUERIES*/
-@media screen and (max-width: 900px) {}
 
-@media screen and (max-width: 768px) {}
+
+/* PUBLICIDAD */
+.publicidad{
+    display: flex;
+    width: 100%;
+    height: 400px;
+    font-family: "Poppins";
+    color: white;
+    background-color:#353434 ;
+    padding: 50px;
+    margin: 50px auto;
+}
+.gallery_img{
+    width: 0;
+    flex-grow: 3;
+    border-radius: 5px;
+    object-fit: cover;
+    opacity: .7;
+    transition: all .3s ease;
+
+}
+
+.gallery_img:hover{ 
+    width: 300px;
+    opacity: 4;
+    cursor: crosshair;
+    filter: contrast(120%);
+}
+
+/* DISPOSITIVOS PEQUEÑOS 768PX */
+
+@media (max-width: 768px){
+    .gallery{
+        flex-wrap: wrap;
+        flex-basis: auto;
+}
+
+}
+/* CELULARES 480PX */
+
+@media(max-width:480px){
+    .gallery{
+    display: flex;
+
+    }
+    .gallery_img:hover{
+        width: 10px;
+       height: 50px;
+    }
+    }
+
+    
+    /* MEDIAQUERIES*/
 
 @media screen and (max-width: 429px) {
     .carousel_titulo {
@@ -108,3 +158,5 @@
         /* Reduce el tamaño del texto */
     }
 }
+
+
