--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,5 @@
 @import "/css/header.css";
 @import "/css/main.css";
 @import "/css/variables.css";
-@import "/css/navbar.css"
+@import "/css/navbar.css";
+@import "/css/peliscategorias.css"
