--- a/css/peliscategorias.css
+++ b/css/peliscategorias.css
@@ -31,7 +31,7 @@ object-fit: fill;: La imagen se estira para llenar el contenedor, pero puede dis
 
     border-radius: 15px;
 
-    padding: 20px;
+    padding: 10px 20px;
     transition: 1s ease;
 }
 
@@ -53,7 +53,7 @@ object-fit: fill;: La imagen se estira para llenar el contenedor, pero puede dis
 
 .card_title {
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 3rem;
     font-weight: 500;
 }
 
