--- a/css/detallePelicula.css
+++ b/css/detallePelicula.css
@@ -4,6 +4,36 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        width: 100%;
-        
+        width: 100%;     
 }
+
+.trailer_video{
+        width: 100%;
+        height: 700px;
+        border-radius: 15px;
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.7);  /*sombra al video Desplazamiento horizontal, desplazamiento vertical, desenfoque, color */
+   
+}
+
+
+ /* MEDIAQUERIES*/
+
+@media (max-width: 834px){ /*tengo que tener como maximo 834px para que se apliquen los cambios*/
+.trailer_video{
+        height: 400px;
+}
+}
+
+@media(max-width:480px){
+        
+    }
+
+@media(max-width: 428px) { /*tengo que tener como maximo 428px para que se apliquen los cambios*/
+.trailer_video{
+        height: 250px;
+}
+}
+    
+@media(max-width: 391px) {
+
+    }
