--- a/css/detalleSerie.css
+++ b/css/detalleSerie.css
@@ -7,10 +7,77 @@
     width: 100%;     
 }
 
+.contenedor_card{
+    width: 350px;
+
+    img{
+        border-radius: 15px;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
+        width: 100%; /* Ajusta según sea necesario */
+        height: auto; /* Mantiene la proporción de la imagen */
+    }
+}
+
+.card_title{
+    color: white;
+    margin-top: 10px;
+}
+
+.card_text{
+    color: white;
+}
+
+.card_superposicion{
+    position: relative;
+}
+.superposicion {
+    position: absolute; /* Posiciona la imagen en relación con el contenedor */
+    display: grid; /*aplico grid para poder centrar*/
+    place-items: center; /* Centra horizontal y verticalmente */
+    top: 0;
+    left: 0;
+    text-decoration: none; /* quita el subrayado del enlace */
+    font-size: 4rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px; 
+    opacity: 0; /* Muestra la imagen superpuesta al hacer hover */
+    z-index: 1; /* Asegura que esta imagen esté encima de la imagen de fondo */
+
+    &:hover {   
+        border: 5px solid white;
+        opacity: 1; /* Muestra la imagen superpuesta al hacer hover */
+        background-color: rgb(0, 0, 0, 0.5);
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* MEDIAQUERIES*/
 
 @media (max-width: 834px){ /*tengo que tener como maximo 834px para que se apliquen los cambios*/
-    .contenedor_principal{
+    .contenedor_principalSerie{
             background-position: 70%; /* modifico la posicion de la imagen */ 
     }
 }
@@ -20,10 +87,7 @@
 }
 
 @media(max-width: 428px) { /*tengo que tener como maximo 428px para que se apliquen los cambios*/
-    .trailer_video{
-            height: 250px;
-    }
-    .contenedor_principal{
+    .contenedor_principalSerie{
             background-position: 80%; /* modifico la posicion de la imagen */ 
     }
 }
