Revert "Detalle serie "

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,4 @@
 @import "/css/header.css";
 @import "/css/main.css";
 @import "/css/variables.css";
-@import "/css/navbar.css";
-@import "/css/detalleSerie.css";
+@import "/css/navbar.css"
