--- a/css/peliscategorias.css
+++ b/css/peliscategorias.css
@@ -62,6 +62,15 @@ object-fit: fill;: La imagen se estira para llenar el contenedor, pero puede dis
     line-height: 25px;
     margin: 5px 0;
     font-weight: 250;
+    overflow: hidden;
+    /* aniado puntos suspensivos cuando el texto es muy largo */
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    /* Limita el texto a 6 líneas, puedes ajustarlo */
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    /* Permite saltos de línea */
+    white-space: normal;
 }
 
 .card_btn {
@@ -75,6 +84,10 @@ object-fit: fill;: La imagen se estira para llenar el contenedor, pero puede dis
     cursor: pointer;
     padding: 0.25rem 0.25rem;
     width: 120px;
+    /* Envía el botón hacia abajo */
+    margin-top: auto;
+    /* Pongo el boton al margen izquierdo */
+    align-self: flex-start;
 }
 
 .card_btn:hover {
