--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,5 @@
 @import "/css/navbar.css";
 @import "/css/detallePelicula.css";
 @import "/css/detalleSerie.css";
-@import "/css/peliscategorias.css"
+@import "/css/peliscategorias.css";
+@import "/css/error404.css";
